--- a/pages/index.css
+++ b/pages/index.css
@@ -42,7 +42,7 @@ html, body {
 }
 
 .header__lang-link {
-  color: #000;
+  color: white;
   font-size: 24px;
   line-height: 28px;
   text-decoration: none;
